--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <li> <a href="project.html"> PROJECTS </a></li> 
         <li> <a href="resume.html" target="_blank"> RESUME </a></li>   
         <li> <a href="about.html" > ABOUT </a></li>
-        <li><a href="head.html"> VIPUL AHIRE </a></li> 
+        <li><a href="index.html"> VIPUL AHIRE </a></li> 
     </ul>
             <center><h2>ABOUT ME </h2></center>
             <pre>        
