--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li> <a href="project.html"> PROJECTS </a></li> 
         <li> <a href="D:\ENGG\CV\vipul CV.pdf" target="_blank"> RESUME </a></li>   
         <li> <a href="about.html" > ABOUT </a></li>
-        <li><a href="head.html"> VIPUL AHIRE </a></li> 
+        <li><a href="index.html"> VIPUL AHIRE </a></li> 
     </ul>
     <img src="vipul.jpg" alt="my image" class="image">
     <center><pre class="name">
@@ -32,9 +32,7 @@
         ADDRESS: Pune  Maharashtra  India </h3>
 
     </pre><a href="https://github.com/vipulahire" target="_blank" style="width:42px;height:42px;"> github</a>
-    <a href="mailto:vipulbahire1@gmail.com">gmail</a></center>
-
-   
+    <a href="mailto:vipulbahire1@gmail.com">gmail</a></center> 
   </div>
 </body>
 </html>
