--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <li> <a href="project.html"> PROJECTS </a></li> 
         <li> <a href="resume.html" target="_blank"> RESUME </a></li>   
         <li> <a href="about.html" > ABOUT </a></li> 
-        <li><a href="head.html"> VIPUL AHIRE </a></li>
+        <li><a href="index.html"> VIPUL AHIRE </a></li>
     </ul>       
   <pre><center><h2>Contact Me</h2>
 
