--- a/project.html
+++ b/project.html
@@ -5,23 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABOUT ME</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="nav.css">
     </head>
 
 <body>
     
-    <video autoplay muted loop id="myVideo">
+    <!--<video autoplay muted loop id="myVideo">
         <source src="geo.mp4" type="video/mp4">
-      </video>
-<div class="content">
-        <ul>
-        <li> <a href="contact.html"> CONTACT </a></li> 
-        <li> <a href="project.html"> PROJECTS </a></li> 
-        <li> <a href="resume.html" target="_blank"> RESUME </a></li>   
-        <li> <a href="about.html" > ABOUT </a></li> 
-        <li><a href="index.html"> VIPUL AHIRE </a></li>
-    </ul>       
-</div>
+      </video>-->
+      <nav class="navbar navbar-inverse navbar-fixed-top" >
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="index.html">VIPUL AHIRE</a>
+          </div>
+          <ul class="nav navbar-nav navbar-right">
+            <li ><a href="about.html">About</a></li>
+            <li><a href="downloads/vipul CV.pdf" target="_blank">Resume</a></li>
+            <li><a href="project.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
   
    
 </body>
