--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
    
   <pre>
     
-    
-    <center><h2>Contact <span style="color: red;">ME</h2></span>
+    <center>
+    <p>Contact Me</p>
     <h4>Feel Free to Get in Touch.Cheers!
 
     Phone : 9689820138/7798827325
@@ -44,7 +44,7 @@
 
     Email : <textarea name="email" id="email" cols="30" rows="1"></textarea>
 
-    Message : <textarea name="text" id="text" cols="30" rows="5"></textarea>
+    Message : <textarea name="text" id="text" cols="30" rows="2"></textarea>
 
      <input type="submit" value="Submit"></h4>
 </pre>
