--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="nav.css">
+   
     </head>
 <body>
     
@@ -29,18 +30,19 @@
       </ul>
     </div>
   </nav>
+  <section>
   <pre>  
-
+    
     <center><img src="img/image.jpg" alt="my image" class="img-circle" width="300" height="300">
     <pre>
-        <h1 > Hi I'am Vipul Ahire</h1>
-        <h3>Hi! Welcome to my Portfolio...
+        <h1 > Hi I'am Vipul Ahire</h1> <h3>Hi! Welcome to my Portfolio...
           A computer science student passionate about programming and design.
           Front End Developer</h3>     
       <img src="img/github.png" width="20" height="30">  <a href="https://github.com/vipulahire" target="_blank">github</a>  <img src="img/gmail.png" width="20" height="30">  <a href="mailto:vipulbahire1@gmail.com" target="_blank">gmail</a> <img src="img//linkedin.png" width="20" height="30"> <a href="https://www.linkedin.com/in/vipul-ahire-9a510a17b/" target="_blank">linkedin</a>
         </pre></center>
+        </section>
   <section>
-    <center><h2>ABOUT<span style="color:red;"> ME</span></h2></center>
+   <p>About Me</p>
     <pre><h4>        
         HELLO! i'AM VIPUL AHIRE.
         I'am BE Student at ICEM Computer Science Department.
@@ -56,7 +58,8 @@
 </pre>
   </section>
   <section>
-  <center><h2>Ski<span style="color: #f9bf3f">lls</span></h2></center>
+ <p>Skills</p>
+ <pre>
   <h4>       Some of the significant aptitudes which will assist me with achieving my objectives.
 
      <span style="color: blue;">MongoDB/ExpressJS/Reactjs/NodeJS</span>  50%            <span style="color:green;">Bootstrap/HTML/JavaScript/CSS</span>    70%
@@ -68,7 +71,7 @@
  </pre>        
 </section>
 <section>
- <center><h2>PRO<span style="color: red;">JECTS</span></h2></center>
+ <p>Projects</p>
  <pre>        
        <h4>
 
@@ -76,7 +79,8 @@
 </pre>   
 </section>
 <footer>
-  <pre ><center><h2>Contact <span style="color: rgb(99, 62, 167);">ME</h2></span>
+ <p>Contact ME</p>
+ <center><pre>
 
    Feel Free to Get in Touch.Cheers!
 
@@ -88,7 +92,7 @@
 
    Email : <textarea name="email" id="email" cols="30" rows="1"></textarea>
 
-   Message : <textarea name="text" id="text" cols="30" rows="5"></textarea>
+   Message : <textarea name="text" id="text" cols="30" rows="2"></textarea>
 
     <input type="submit" value="Submit">
 <img src="img/github.png" width="20" height="30">  <a href="https://github.com/vipulahire" target="_blank">github</a>  <img src="img/gmail.png" width="20" height="30">  <a href="mailto:vipulbahire1@gmail.com" target="_blank">gmail</a> <img src="img/linkedin.png" width="20" height="30"> <a href="https://www.linkedin.com/in/vipul-ahire-9a510a17b/" target="_blank">linkedin</a>
