--- a/project.html
+++ b/project.html
@@ -29,7 +29,17 @@
           </ul>
         </div>
       </nav>
-  
+  <section>
+    <pre>
+    <p>Projects</p>
+
+
+
+
+
+    
+    </pre>
+  </section>
    
 </body>
 </html>
