--- a/index.html
+++ b/index.html
@@ -12,30 +12,40 @@
    
     </head>
 <body>
-    
-<!--<video autoplay muted loop id="myVideo">
-    <source src="geo.mp4" type="video/mp4">
-  </video>-->
-  
-  <nav class="navbar navbar-inverse navbar-fixed-top" >
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="index.html">VIPUL AHIRE</a>
+  <header>
+    <div class="overlay"></div>
+    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+      <source src="geo.mp4" type="video/mp4">
+    </video>
+    <div class="container h-100">
+      <div class="d-flex h-100 text-center  align-items-center">
+      <div class="w-100 text-white">
+          <nav class="navbar navbar-inverse navbar-fixed-top" >
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="index.html">VIPUL AHIRE</a>
+          </div>
+          <ul class="nav navbar-nav navbar-right">
+            <li ><a href="about.html">About</a></li>
+            <li><a href="downloads/vipul CV.pdf" target="_blank">Resume</a></li>
+            <li><a href="project.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <pre>
+      </pre>
+        <img src="img/image.jpg" alt="my image" class="img-circle" width="200" height="220">
+        <h3 > Hi I'am Vipul Ahire</h3>   
+        </div>
       </div>
-      <ul class="nav navbar-nav navbar-right">
-        <li ><a href="about.html">About</a></li>
-        <li><a href="downloads/vipul CV.pdf" target="_blank">Resume</a></li>
-        <li><a href="project.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
     </div>
-  </nav>
+  </header>    
+
   <section>
-  <pre>  
-    
-    <center><img src="img/image.jpg" alt="my image" class="img-circle" width="300" height="300">
+  <pre >  
     <pre>
-        <h1 > Hi I'am Vipul Ahire</h1> <h3>Hi! Welcome to my Portfolio...
+    <center><h3>Hi! Welcome to my Portfolio...
           A computer science student passionate about programming and design.
           Front End Developer</h3>     
       <img src="img/github.png" width="20" height="30">  <a href="https://github.com/vipulahire" target="_blank">github</a>  <img src="img/gmail.png" width="20" height="30">  <a href="mailto:vipulbahire1@gmail.com" target="_blank">gmail</a> <img src="img//linkedin.png" width="20" height="30"> <a href="https://www.linkedin.com/in/vipul-ahire-9a510a17b/" target="_blank">linkedin</a>
